--- a/M1U2/styles/styles.css
+++ b/M1U2/styles/styles.css
@@ -23,8 +23,7 @@ h2 {
 }
 
 .profile-pic img {
-    border: 4px solid #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    padding: 20px;
 }
 
 .main-content {
