--- a/M1U3/styles/styles.css
+++ b/M1U3/styles/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f9f9f9;
