--- a/M4U4b/views/layout.hbs
+++ b/M4U4b/views/layout.hbs
@@ -17,7 +17,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">CDN JOVEN</a>
+      <a class="navbar-brand" href="/">CDN JOVEN</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -25,15 +25,18 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#home">Home</a>
+            <a class="nav-link active" aria-current="page" href="/#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#servicios">Servicios</a>
+            <a class="nav-link" href="/#servicios">Servicios</a>
           <li class="nav-item">
-            <a class="nav-link" href="#novedades">Novedades</a>
+            <a class="nav-link" href="/#novedades">Novedades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#contacto">Contacto</a>
+            <a class="nav-link" href="/#contacto">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="nosotros">Nosotros</a>
           </li>
 
           <li class="nav-item dropdown">
@@ -41,9 +44,9 @@
               Programas
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="enciendepodcast.html">Enciende Podcast</a></li>
-              <li><a class="dropdown-item" href="plenitud.html">Plenitud</a></li>
-              <li><a class="dropdown-item" href="#cdvradio">cdv Radio</a></li>
+              <li><a class="dropdown-item" href="enciendepodcast">Enciende Podcast</a></li>
+              <li><a class="dropdown-item" href="plenitud">Plenitud</a></li>
+              <li><a class="dropdown-item" href="cdvradio">cdv Radio</a></li>
             </ul>
           </li>
         </ul>
