--- a/proyecto_cdvjoven/views/admin/modificar.hbs
+++ b/proyecto_cdvjoven/views/admin/modificar.hbs
@@ -56,7 +56,7 @@
       <div class="card shadow rounded-4 border-0">
         <div class="card-body p-4">
           <h4 class="mb-4 text-center text-primary">Modificar novedad ID: {{novedad.id}}</h4>
-          <form action="/admin/novedades/modificar" method="post">
+          <form action="/admin/novedades/modificar" method="post" enctype="multipart/form-data">
             <input type="hidden" name="id" value="{{novedad.id}}">
 
             <div class="mb-3">
