--- a/proyecto_cdvjoven/views/admin/novedades.hbs
+++ b/proyecto_cdvjoven/views/admin/novedades.hbs
@@ -27,7 +27,6 @@
 
             </button>
 
-
             <ul class="navbar-nav">
                 {{#if user}}
                 <li class="nav-item">
@@ -52,13 +51,13 @@
 
     <div class="container mt-5">
 
-        {{#if successMessage}}
+        {{!-- Aquí va el mensaje de éxito --}}
+        {{#if success}}
         <div class="alert alert-success alert-dismissible fade show" role="alert">
-            {{successMessage}}
+            {{success}}
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         {{/if}}
-
 
         <div class="d-flex justify-content-between align-items-center mb-4 border-bottom pb-2">
             <h2 class="m-0">📢 Novedades</h2>
@@ -102,9 +101,6 @@
             Aún no hay novedades cargadas.
         </div>
         {{/if}}
-    </div>
-
-
     </div>
 
     <footer>
